[package]
name = "roder-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
roder-api.workspace = true
roder-dynamic-workflows.workspace = true
roder-roadmap.workspace = true
roder-sandbox.workspace = true
roder-skills.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
roder-context.workspace = true
roder-ext-git.workspace = true
roder-ext-knowledge-md.workspace = true
roder-ext-jsonl-thread-store.workspace = true
roder-ext-runner-sprites.workspace = true
roder-ext-task-ledger.workspace = true
roder-ext-runner-unix-local.workspace = true
roder-ext-verification.workspace = true
roder-tools.workspace = true
roder-usage-analytics.workspace = true
