[package]
name = "roder-dynamic-workflows"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
boa_engine.workspace = true
roder-api.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
time = { workspace = true, features = ["serde", "serde-well-known"] }
tokio.workspace = true
