[package]
name = "roder-dynamic-workflows"
version = "0.1.2"
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
boa_engine.workspace = true
roder-api.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
time = { workspace = true, features = ["serde", "serde-well-known"] }
tokio.workspace = true
