[package]
name = "roder-edit-wasm"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
roder-edit-core.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
wasm-bindgen.workspace = true
