[package]
name = "roder-evals"
version = "0.1.0"
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
anyhow.workspace = true
roder-api.workspace = true
roder-context.workspace = true
roder-core.workspace = true
roder-ext-anthropic.workspace = true
roder-ext-openai-responses.workspace = true
roder-ext-task-ledger.workspace = true
roder-ext-verification.workspace = true
roder-ext-zerolang.workspace = true
roder-tools.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
time = { workspace = true, features = ["formatting", "parsing", "serde", "serde-well-known"] }
tokio.workspace = true
uuid = { workspace = true, features = ["v4"] }
