[package]
name = "roder-ext-anthropic"
version = "0.1.1"
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"

[package.metadata.roder.distribution]
id = "anthropic"
category = "inference-engine"
display_name = "Anthropic Messages"
description = "Anthropic Messages inference with streaming text and tool calls."
default_in_profiles = ["full", "anthropic-only"]
required_env = ["ANTHROPIC_API_KEY"]
optional_env = []
conflicts_with = []
required_capabilities = ["network.api.anthropic.com", "secret.read.ANTHROPIC_API_KEY"]
extension_path = "::AnthropicExtension::new"
docs_url = "https://docs.anthropic.com/en/api/messages"

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
reqwest = { workspace = true, features = ["json", "stream"] }
roder-api.workspace = true
roder-config.workspace = true
semver.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
