[package]
name = "roder-ext-disk-context"
version = "0.1.1"
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"

[package.metadata.roder.distribution]
id = "disk-context"
category = "context-provider"
display_name = "Disk Context"
description = "Local disk-backed context provider for workspace files."
default_in_profiles = ["full", "research-headless"]
required_env = []
optional_env = []
conflicts_with = []
required_capabilities = ["fs.read.workspace"]
extension_path = "::DiskContextExtension"
docs_url = ""

[dependencies]
anyhow.workspace = true
roder-api.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
