[package]
name = "roder-ext-fireworks"
version = "0.1.0"
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"

[package.metadata.roder.distribution]
id = "fireworks"
category = "inference-engine"
display_name = "Fireworks AI"
description = "Fireworks AI API-key inference provider using OpenAI-compatible Responses."
default_in_profiles = ["full", "research-headless"]
required_env = []
optional_env = ["FIREWORKS_API_KEY", "RODER_FIREWORKS_API_KEY", "FIREWORKS_BASE_URL", "FIREWORKS_API_BASE_URL", "RODER_FIREWORKS_BASE_URL", "RODER_MODELS_CACHE_PATH", "RODER_MODELS_CACHE_TTL_SECONDS", "RODER_MODELS_REFRESH"]
conflicts_with = []
required_capabilities = ["network.api.fireworks.ai"]
extension_path = "::FireworksExtension::new"
docs_url = "https://docs.fireworks.ai/guides/response-api"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
roder-api.workspace = true
roder-ext-openai-responses.workspace = true
semver.workspace = true

[dev-dependencies]
futures.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde_json.workspace = true
tokio.workspace = true
